Kustomize/sample-flask-app/overlay/prod/custom-env.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app
spec:
  template:
    spec:
     containers:
      - env:
        - name: APP_COLOR
          value: green
        name: flask-app
