Kustomize/sample-flask-app/overlay/prod/flask-prod-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flask-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: prod-flask.app.com
      http:
        paths:
          - path: /
            backend:
              serviceName: flask-app-prod
              servicePort: 8080
